2008-10-14  Martin Kutschker  <masi@typo3.org>

	* #9501: Titles of content columns in classic page module doesn't take into account backend charset (thanx to Steffen Kamper and Vladimir Podkovanov)

2008-10-14  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #9400: enables to have specific HTTP status codes on a sys_domain record when doing a redirect (new field sys_domain.redirectHttpStatusCode)

2008-10-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9523: class.t3lib_htmlmail.php produces null headers in HTML messages

2008-10-13  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #9533: Made substituteMarkerArrayCached not so strict. Still with type hinting, but also allowing the null (uninitialized var) to be passed (to prevent several older extensions from breaking).

2008-10-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #7970: htmlARea RTE: fontstyle and fontsize should not use deprecated font tag

2008-10-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9522: t3lib_BEfunc::BEenableFields generates invalid SQL
	* Fixed bug #9469: Failed to load magic database

2008-10-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9516: htmlARea RTE: Move link tags to head
	* Added feature #9521: htmlArea RTE: factor out some functions dealing with inline elements
	* Added feature #7875: Coloured text is created using font-tag instead of span in IE
	* Added feature #8847: Custom colors in TYPO3Color like old SelectColor extension

2008-10-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9490: htmlArea RTE: Opera 9.52 sometimes refuses to insert a node

2008-10-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #9472: htmlArea RTE: Safari may crash when the RTE closes
	* Fixed bug #9484: htmlArea RTE: context menu raises an error when link button is not configured

2008-10-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9479: Selected items are not visible after saving the form in BE
